baseline site, css needs some help

--- a/cv.html
+++ b/cv.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<head>
+    <link rel="stylesheet" href="css/cv.css"/>
+</head>
 <html>
     <h2>Professional Experience</h2>
     <h3>Software Engineer Intern - Oracle Cloud Infrastructure</h3>
@@ -10,7 +13,6 @@
         <li>Deployed the metrics to Grafana dashboards for isualization resulting in improved insight into customer usage 
             habits and the Object Storage service's efficiency</li>
     </ul>
-
     <h3>Software Engineer Intern - Principal Financial Group</h3>
     <h4>May - August 2022 / Des Moines, Iowa</h4>
     <ul>
@@ -31,12 +33,33 @@
 
     <h3>President of Digital Women - Iowa State University</h3>
     <h4>May 2023 - Current / Ames, Iowa</h4>
+    <ul>
+        <li>Lead an executive board of 10 peers to plan, facilitate, and execute weekly club meetings designed to support people in technology majors and foster an inclusive environment</li>
+        <li>Plan and execute annual club trip the Grace Hopper Conference for 10 Digital Women members through communicating with AnitaB reps, writing up a weekly itinerary, making living and travel arrangements, and overseeing the trip as the primary contact</li>
+        <li>Directly contribute feedback to the Electrical & Computer Engineering (ECpE) Department Chair and interface with companies as a member of the Student Advisory Committee</li>
+    </ul>
 
     <h3>Vice President of Digital Women</h3>
     <h4>December 2021-May 2023</h4>
-
-    <h3>Secretary of Digital Women</h3>
+    <ul>
+        <li>Served as Director for Digital Women’s annual Code Camp Hackathon – hosted for the first time in person in over 2 years</li>
+        <li>Collaborated with a team of 3 Digital Women executive members to streamline communication with corporate sponsors and campus-wide marketing</li>
+        <li>Curated a 48-hour event itinerary consisting of various events such as workshops, corporate tech talks, and meals to engage participants</li>
+        <li>Directed an executive team of 10 through volunteering shifts to equally distribute responsibilities and ensure proper event oversight while maintaining on-campus facilities</li>
+        <li>Provided weekly updates & directed executive members to deliver on their specific tasks</li>
+        <li>Registered 5 teams, 25 students total, that represented over 20 different majors</li>
+    </ul>
+    <h3>Secretary of Digital Women & Freshman Mentor</h3>
     <h4>August 2021-December 2021</h4>
+    <ul>
+        <li>Curate and distribute the weekly newsletter to 200+ registered members</li>
+        <li>Conduct weekly meetings to plan events and make executive decisions regarding the organization</li>
+        <li>Provide 1-on-1 mentorship to a freshman student (through DW's Mentor/Mentee program) to enhance their transition to college life & their major</li>
+    </ul>
+
+    <div class="button">
+        <input type="button" value="Return" onclick="location.href='index.html'" />
+    </div>
 
 
 </html>
