forgot to hit save lmao

--- a/index.html
+++ b/index.html
@@ -2,19 +2,6 @@
 <head>
     <link rel="stylesheet" href="css/index.css"/>
 </head>
-    <div class="container">
-        <img src="images/photo.jpeg">
-    </div>
-    <h1>
-        Lydia McCleary
-    </h1>
-    <h3>
-        Software Engineer
-    </h3>
-    <div class="button">
-        <input type="button" value="LinkedIn" onclick="window.open('http://www.linkedin.com/in/lydia-mccleary')" /> <br>
-        <input type="button" value="My Github!" onclick="window.open('http://www.github.com/mcclelyd')" /> <br> 
-        <input type="button" value="My Experience" onclick="location.href='cv.html'" /> <br>
-        <input type="button" value="Contact Me!" onclick="" /> 
-    </div>
+
+<body>This site is currently under construction. <br> <br> PS Sergio if you're reading this, go touch grass.</body>
 
